Created: 2009-05-13
$Id$

2008-08-16  1.5.0.alpha7
	issue 162: "External ontology considered to be internal"
	- OntServiceUtil.isOntResolvableUri(String uri): uses the ont.service.url
	  config parameter to determine if a given URI is resolvable by the deployed "ont" service.
	  This returns true iff uri.startsWith(value of ont.service.url parameter).
	  (there's a similar method in "ont" module)

2008-08-13  1.5.0.alpha6
	- Issue #164 Keep periods and case in term URI
		- More in general, if the first column given to VocCreator is named "uri," the values
		  are just checked for validity (according to java.net.URI constructor), and now
		  no conversions at all are performed. 
		  
	- CreateOntologyInfo and RegisteredOntologyInfo: removed namespaceRoot attribute -- this 
	  was added in a preliminary approach to handle re-hosting. It is not necessary anymore.
	
	
2008-08-10  1.5.0.alpha5
	Processing "version" parameter  (issue #159)
		- Server.getOntologyInfo(String ontologyUri): parses the string to extract version parameter, if any.
		
	Fixed replication of ontology attributes when creating a new version:
		- Server.createOntology(CreateOntologyInfo): newOntModel.removeAll(ont_, prd, null) is called when
		  there is a new value for the corresponding property.
		  TODO Note: We are always replacing the values; we may eventually consider a mechanism to allow 
		  actual *addition" of more values for the same predicate.
		  
	Server.getOntologyInfo(String ontologyUri): always include all versions. (note that the flag was
	called includePriorVersions originally)
	 
	
2008-08-07:
	- Checking pre-existing registered ontology when trying to submit a new one:
		Util2.checkNoPreexistingOntology(String possibleOntologyUri, BaseResult result)
		Server.createOntology(CreateOntologyInfo createOntologyInfo)
		OntServiceUtil.isRegisteredOntologyUri(String uriModel, String... acceptEntries)
		Util2.checkNoPreexistingOntology(String possibleOntologyUri, BaseResult result)
	
	